# simple-spectral

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  render-cornell-srgb-512x512@4096.bat  render-cornell-srgb-512x512@64.bat  render-cornell.bat
cmake/: FindGLFW3.cmake  FindGLM.cmake
data/: calc_basis.m  cie1931-basis-bt709-380+5+780.csv  cie2006-basis-bt709-390+1+780.csv  cie2006-xyzbar-390+1+830.csv  d65-300+5+780.csv  spectral-basis-bt.709.csv  standard-observer.csv
data/scenes/cornell/: light.csv  white-green-red.csv
src/: color.cpp  color.hpp  framebuffer.cpp  framebuffer.hpp  geometry.cpp  geometry.hpp  main.cpp  material.cpp  material.hpp  math-helpers.hpp  renderer.cpp  renderer.hpp  rng.cpp  rng.hpp  scene.cpp  scene.hpp  spectrum.cpp  spectrum.hpp  stdafx.hpp
src/jakob-and-hanika-2019/: readme.md  rgb2spec.c  rgb2spec.h
src/meng-et-al.-2015/: readme.md  spectra_xyz_5nm_380_780_0.97.h  spectrum_grid.h
src/util/: color.cpp  color.hpp  math-helpers.hpp  random.cpp  random.hpp  spherical-tri.cpp  spherical-tri.hpp  string.hpp
